--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,7 @@ h1{
 }
 .card{
 	background-image: url("../images/white.jpg");
+	max-width: 600px;
 	border: 2px inset #AAA;
 	margin: 30px;
 	padding: 20px;
