--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,17 @@
 body{
 	background-image: url("../images/green.jpg");
 	background-size: cover;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 h1{
 	color: #86b326;
 	margin: 0 0 0 20px;
-	text-shadow: 1px 1px #888
 }
 #banner{
-	font-size: 20px;
+	font-size: 30px;
+	text-shadow: 2px 2px 1px #555;
+	letter-spacing: 3px;
+	font-family: Impact, Charcoal, sans-serif;
 	background-image: url("../images/dark.jpg");
 	padding: 10px;
 }
@@ -23,9 +26,11 @@ h1{
 }
 .card{
 	background-image: url("../images/white.jpg");
+	text-shadow: 2px 2px 1px #aaa;
 	max-width: 800px;
 	border: 2px inset #AAA;
-	margin: 30px;
+	margin: 40px;
+	margin-left:50px;
 	padding: 20px;
 }
 .note-field{
